--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Plan</title>
-    <link rel="stylesheet" href="/wwr/styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="/wwr/site-plan-rafting.css">
 </head>
 <body>
     <header>
