--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="/wwr/site-plan-rafting.html">Rafting Site</a></li>
+            <li><a href="/wdd130/wwr/site-plan-rafting.html">Rafting Site</a></li>
         </ul>
     </nav>
 
