--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Plan</title>
-    <link rel="stylesheet" href="/wdd130/wwr/styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="/wdd130/wwr/styles/site-plan-rafting.css"> <!-- Make sure the CSS path is correct -->
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="/wwr/brownrafting.jpeg" alt="Rafting Co. Logo">
+            <img src="/wdd130/wwr/brownrafting.jpeg" alt="Rafting Co. Logo"> <!-- Replace with your logo path -->
         </div>
         <h1>Rafting Co.</h1>
         <p>Brayden Barger</p>
@@ -29,20 +29,44 @@
 
         <section id="colors">
             <h2>Colors</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <!-- Color descriptions with small squares -->
+                        <p>
+                            <span class="color-box primary-color"></span> 
+                            The <strong>Primary Color</strong> (#243e36)
+                        </p>
+                        
+                        <p>
+                            <span class="color-box secondary-color"></span> 
+                            The <strong>Secondary Color</strong> (#7ca982)
+                        </p>
+                        
+                        <p>
+                            <span class="color-box tertiary-color"></span> 
+                            The <strong>Tertiary Color</strong> (#f1f7ed)
+                        </p>
         </section>
 
         <section id="fonts">
             <h2>Fonts</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>
+                For the fonts I used a web-safe sans-serif font <strong>Arial</strong> for body text and <strong>Verdana</strong> for headings.
+            </p>
         </section>
 
         <section id="navigation">
             <h2>Navigation</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p><!-- Navigation bar -->
+                <nav>
+                    <ul class="nav-links">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Page 2</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+            </p>
         </section>
 
-        <section id="sitemap">
+        <section id="site-map">
             <h2>Site Map</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </section>
@@ -54,7 +78,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Brayden Barger. All rights reserved.</p>
+        <p>&copy; 2024 Rafting Co.</p>
     </footer>
 </body>
 </html>
