--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="/wdd130/wwr/site-plan-rafting.html">Rafting Site</a></li>
+            <li><a href="wireframe.html">Rafting Site Wireframe</a></li>
         </ul>
     </nav>
 
