--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Plan</title>
-    <link rel="stylesheet" href="/wdd130/wwr/styles/site-plan-rafting.css"> <!-- Make sure the CSS path is correct -->
+    <link rel="stylesheet" href="wwr/styles/site-plan-rafting.css"> <!-- Make sure the CSS path is correct -->
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="/wdd130/wwr/brownrafting.jpeg" alt="Rafting Co. Logo"> <!-- Replace with your logo path -->
+            <img src="wwr/brownrafting.jpeg" alt="Rafting Co. Logo"> <!-- Replace with your logo path -->
         </div>
         <h1>Rafting Co.</h1>
         <p>Brayden Barger</p>
