--- a/wireframe.html
+++ b/wireframe.html
@@ -12,7 +12,7 @@
     <!-- Header Section -->
     <header>
         <a href="index2.html">
-            <img id="logo" src="images/logo.png" alt="logo">
+            <img id="logo" src="images/logo.png" alt="Company Logo">
         </a>
         <br>
         <a href="index.html" class="logo">Rafting Co.</a>
@@ -25,7 +25,7 @@
 
     <!-- Hero Banner -->
     <section class="hero">
-        <img src="images/Rafting1.jpg" alt="hero rafting image">
+        <img src="images/Rafting1.jpg" alt="Hero Rafting Image">
         <h1>Adventure Awaits</h1>
         <p>Explore the best rafting experiences</p>
     </section>
@@ -33,17 +33,17 @@
     <!-- Cards Section -->
     <section class="cards">
         <div class="card">
-            <img src="images/Rafting2.jpeg" alt="River 1"> <!-- Replace with actual images -->
+            <img src="images/Rafting2.jpeg" alt="River Image"> <!-- Replace with actual images -->
             <h3>River Rapids</h3>
             <p>Experience the thrill of Class 5 rapids with our expert guides.</p>
         </div>
         <div class="card">
-            <img src="images/Rafting3.jpeg" alt="River 2">
+            <img src="images/Rafting3.jpeg" alt="River Image">
             <h3>Peaceful Streams</h3>
             <p>Enjoy a serene rafting experience on gentle waters.</p>
         </div>
         <div class="card">
-            <img src="images/Rafting4.jpeg" alt="River 3">
+            <img src="images/Rafting4.jpeg" alt="River Iamge">
             <h3>Family Adventure</h3>
             <p>Bring the whole family for a fun and safe rafting trip.</p>
         </div>
@@ -53,7 +53,7 @@
     <section class="main-content">
         <h2>The Best Rafting Locations</h2>
         <p>Discover world-class rafting spots with breathtaking views and thrilling adventures. Whether you're a seasoned rafter or a beginner, we have the perfect locations for you.</p>
-        <img src="images/Rafting5.jpeg" alt="Rafting Locations"> <!-- Replace with actual image -->
+        <img src="images/Rafting5.jpeg" alt="Rafting Location Image"> <!-- Replace with actual image -->
     </section>
 
     <!-- Footer Section -->
