--- a/wireframepractice/wireframe.html
+++ b/wireframepractice/wireframe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafting Co.</title>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/Rafting1.jpgimages/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <!-- Header Section -->
     <header>
         <a href="index2.html">
-            <img id="logo" src="images/logo.png" alt="Company Logo">
+            <img id="logo" src="../images/logo.png" alt="Company Logo">
         </a>
         <br>
         <a href="index.html" class="logo">Rafting Co.</a>
@@ -25,7 +25,7 @@
 
     <!-- Hero Banner -->
     <section class="hero">
-        <img src="images/Rafting1.jpg" alt="Hero Rafting Image">
+        <img src="../images/Rafting1.jpg" alt="Hero Rafting Image">
         <h1>Adventure Awaits</h1>
         <p>Explore the best rafting experiences</p>
     </section>
@@ -33,17 +33,17 @@
     <!-- Cards Section -->
     <section class="cards">
         <div class="card">
-            <img src="images/Rafting2.jpeg" alt="River Image"> <!-- Replace with actual images -->
+            <img src="../images/Rafting2.jpeg" alt="River Image"> <!-- Replace with actual ../images/Rafting1.jpgimages -->
             <h3>River Rapids</h3>
             <p>Experience the thrill of Class 5 rapids with our expert guides.</p>
         </div>
         <div class="card">
-            <img src="images/Rafting3.jpeg" alt="River Image">
+            <img src="../images/Rafting3.jpeg" alt="River Image">
             <h3>Peaceful Streams</h3>
             <p>Enjoy a serene rafting experience on gentle waters.</p>
         </div>
         <div class="card">
-            <img src="images/Rafting4.jpeg" alt="River Iamge">
+            <img src="../images/Rafting4.jpeg" alt="River Iamge">
             <h3>Family Adventure</h3>
             <p>Bring the whole family for a fun and safe rafting trip.</p>
         </div>
@@ -53,7 +53,7 @@
     <section class="main-content">
         <h2>The Best Rafting Locations</h2>
         <p>Discover world-class rafting spots with breathtaking views and thrilling adventures. Whether you're a seasoned rafter or a beginner, we have the perfect locations for you.</p>
-        <img src="images/Rafting5.jpeg" alt="Rafting Location Image"> <!-- Replace with actual image -->
+        <img src="../images/Rafting5.jpeg" alt="Rafting Location Image"> <!-- Replace with actual image -->
     </section>
 
     <!-- Footer Section -->
