--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -14,8 +14,8 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="/wdd130/wwr/site-plan-rafting.html">Rafting Site</a></li>
-            <li><a href="wireframe.html">Rafting Site Wireframe</a></li>
+            <li><a href="../wwr/site-plan-rafting.html">Rafting Site</a></li>
+            <li><a href="../wireframepractice/wireframe.html">Rafting Site Wireframe</a></li>
         </ul>
     </nav>
 
