--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -22,7 +22,7 @@
     <!-- Main Section (About Me) -->
     <main>
         <h1>About Me</h1>
-        <img src="images/braydenb.jpg" alt="A photo of Brayden Barger" width="20%" height="20%">
+        <img src="../images/braydenb.jpg" alt="A photo of Brayden Barger" width="20%" height="20%">
         <p>I'm Brayden Barger. I'm from Utah and I'm here at BYU-Iaho studying Computer Science. I like playing Basketball as well as doing things outside like skiing and climbing.</p>
     </main>
 
