--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="personalsite/about.html">About Me</a></li>
+            <li><a href="personalsite/portfolio.html">Portfolio</a></li>
+            <li><a href="personalsite/contact.html">Contact</a></li>
             <li><a href="../wwr/site-plan-rafting.html">Rafting Site</a></li>
             <li><a href="../wireframepractice/wireframe.html">Rafting Site Wireframe</a></li>
         </ul>
