--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <li><a href="personalsite/about.html">About Me</a></li>
             <li><a href="personalsite/portfolio.html">Portfolio</a></li>
             <li><a href="personalsite/contact.html">Contact</a></li>
-            <li><a href="../wwr/site-plan-rafting.html">Rafting Site</a></li>
-            <li><a href="../wireframepractice/wireframe.html">Rafting Site Wireframe</a></li>
+            <li><a href="wwr/site-plan-rafting.html">Rafting Site</a></li>
+            <li><a href="wireframepractice/wireframe.html">Rafting Site Wireframe</a></li>
         </ul>
     </nav>
 
