--- a/wireframepractice/wireframe.html
+++ b/wireframepractice/wireframe.html
@@ -6,16 +6,16 @@
     <title>Rafting Co.</title>
     <link rel="shortcut icon" href="../images/Rafting1.jpgimages/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../wireframepractice/styles.css">
 </head>
 <body>
 
     <!-- Header Section -->
     <header>
-        <a href="index2.html">
-            <img id="logo" src="../images/logo.png" alt="Company Logo">
-        </a>
-        <br>
-        <a href="index.html" class="logo">Rafting Co.</a>
+        <div class="logo-title">
+            <img src="../images/logo.png" alt="Rafting Co. Logo" class="logo-img"> <!-- Replace with your logo image -->
+            <span class="logo-text">Rafting Co.</span>
+        </div>
         <nav>
             <a href="rivers.html">Rivers</a>
             <a href="about.html">About</a>
@@ -25,25 +25,26 @@
 
     <!-- Hero Banner -->
     <section class="hero">
-        <img src="../images/Rafting1.jpg" alt="Hero Rafting Image">
-        <h1>Adventure Awaits</h1>
-        <p>Explore the best rafting experiences</p>
+        <div class="container">
+            <h1>Adventure Awaits</h1>
+            <p>Explore the best rafting experiences</p>
+        </div>
     </section>
 
     <!-- Cards Section -->
     <section class="cards">
         <div class="card">
-            <img src="../images/Rafting2.jpeg" alt="River Image"> <!-- Replace with actual ../images/Rafting1.jpgimages -->
+            <img src="../images/Rafting2.jpeg" alt="River 1">
             <h3>River Rapids</h3>
             <p>Experience the thrill of Class 5 rapids with our expert guides.</p>
         </div>
         <div class="card">
-            <img src="../images/Rafting3.jpeg" alt="River Image">
+            <img src="../images/Rafting3.jpeg" alt="River 2">
             <h3>Peaceful Streams</h3>
             <p>Enjoy a serene rafting experience on gentle waters.</p>
         </div>
         <div class="card">
-            <img src="../images/Rafting4.jpeg" alt="River Iamge">
+            <img src="../images/Rafting4.jpeg" alt="River 3">
             <h3>Family Adventure</h3>
             <p>Bring the whole family for a fun and safe rafting trip.</p>
         </div>
@@ -52,20 +53,18 @@
     <!-- Main Image with Heading and Paragraph -->
     <section class="main-content">
         <h2>The Best Rafting Locations</h2>
-        <p>Discover world-class rafting spots with breathtaking views and thrilling adventures. Whether you're a seasoned rafter or a beginner, we have the perfect locations for you.</p>
-        <img src="../images/Rafting5.jpeg" alt="Rafting Location Image"> <!-- Replace with actual image -->
+        <p>Discover world-class rafting spots with breathtaking views and thrilling adventures.</p>
+        <img src="../images/Rafting5.jpeg" alt="Rafting Locations">
     </section>
 
     <!-- Footer Section -->
     <footer>
         <div class="social-media">
-            <a href="https://facebook.com" class="fa fa-facebook">Facebook</a>
-            <a href="https://twitter.com" class="fa fa-twitter">Twitter</a>
-            <a href="https://instagram.com" class="fa fa-instagram">Instagram</a>
+            <a href="https://facebook.com" target="_blank" class="fa fa-facebook"></a>
+            <a href="https://twitter.com" target="_blank" class="fa fa-twitter"></a>
+            <a href="https://instagram.com" target="_blank" class="fa fa-instagram"></a>
         </div>
-        <div class="copyright">
-            &copy; 2024 Rafting Co. All rights reserved.
-        </div>
+        <p>&copy; 2024 Rafting Co. All rights reserved.</p>
     </footer>
 
 </body>
