--- a/wireframepractice/wireframe.html
+++ b/wireframepractice/wireframe.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafting Co.</title>
-    <link rel="shortcut icon" href="../images/Rafting1.jpgimages/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../wireframepractice/styles.css">
 </head>
 <body>
 
     <!-- Header Section -->
-    <header>
+    <header class="header-grid">
         <div class="logo-title">
-            <img src="../images/logo.png" alt="Rafting Co. Logo" class="logo-img"> <!-- Replace with your logo image -->
+            <img src="../images/logo.png" alt="Rafting Co. Logo" class="logo-img">
             <span class="logo-text">Rafting Co.</span>
         </div>
-        <nav>
+        <nav class="nav-links">
             <a href="rivers.html">Rivers</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
