--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -73,7 +73,7 @@
 
         <section id="wireframes">
             <h2>Wireframes</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <img src="Screenshot 2024-11-05 at 1.47.23 PM.png" alt="river page wireframe">
         </section>
     </main>
 
