--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
     
@@ -12,93 +11,59 @@
     <header>
       <h1>Portfolio Site Plan</h1>
       <h2>Brayden Barger</h2>
-      <h2>WDD 130.03</h2>
-      <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
+      <h2>WDD 130.01</h2>
     </header>
     <main>
 
-      <!-- ------------------------Steps 2-3------------------------------ -->
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>Show a portfolio of the projects I have done and the concepts I have learned in this class</p>  <!-- change this -->
-
+      <p>To showcase my portfolio, including projects and concepts I've learned in my Web Development course.</p> 
 
       <h3>Audience</h3>
-      <p>For Future employers to be able to see</p>  <!-- change this -->
+      <p>For potential employers, instructors, and anyone interested in my work and web development skills.</p> 
 
       <hr>
       <h2>Branding</h2>
       <h3 class="logo">Brayden Barger's Portfolio</h3>
-      <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
       <hr>
-      <h2>
-        Style Guide
-      </h2>
+      <h2>Style Guide</h2>
 
-      <!-- ------------------------Steps 4-8------------------------------ -->
-
-      <h3>
-        Color Palette
-      </h3>
-      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn. You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
-
+      <h3>Color Palette</h3>
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
-        <!-- Switch to the site-plan.css file and change your colors there. -->
         <tr><td class="primary"></td><td class="secondary"></td><td class="accent1"></td><td class="accent2"></td></tr>
       </table>
 
-      <!-- ------------------------Step 9------------------------------ -->
-
-      <h3>
-        Typography
-      </h3>
-      <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
-
-      <h4>
-        Heading Font: Verdana  <!-- change this -->
-      </h4>
-      <h4>
-        Paragraph Font: Arial  <!-- change this -->
-      </h4>
-      <h3>
-        Normal paragraph example
-      </h3>
+      <h3>Typography</h3>
+      <h4>Heading Font: Verdana</h4> 
+      <h4>Paragraph Font: Arial</h4> 
+      <h3>Normal paragraph example</h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-      <h3>
-        Colored paragraph example
-      </h3>
+      <h3>Colored paragraph example</h3>
       <p class="colored">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       </p>
 
-      <!-- ------------------------Step 10------------------------------ -->
-
-      <h3>
-        Navigation
-      </h3>
-      <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
+      <h3>Navigation</h3>
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Websites</a>
+        <a href="#">Concept Practices</a>
       </nav>
       <hr>
-      <h2>
-        Site Map
-      </h2>
+      <h2>Site Map</h2>
       <div class="sitemap">
         <div class="sm-home">
           Home
         </div>
         <div class="sm-page2">
-          Websites <!-- change this -->
+          Websites
         </div>
         <div class="sm-page3">
-          Concept practices  <!-- change this -->
+          Concept Practices
         </div>
 
         <div class="top">
@@ -113,62 +78,60 @@
 
       </div>
 
-      <!-- --------Content Section -------------- -->
       <hr>
-      <h2>
-        Content
-      </h2>
+      <h2>Content</h2>
+
       <h3>Home page</h3>
-      <p>
-        I am Brayden Barger. I am studying computer science at BYU-Idaho. Here is some of the work I did in my Web Development class
-      </p>
+      <p><strong>Introduction:</strong> I am Brayden Barger, studying computer science at BYU-Idaho. This website showcases the work I’ve done in my Web Development course, including projects and applied concepts, aimed at future employers and anyone interested in my web development skills.</p>
+
+      <p><strong>Audience:</strong> The site is designed for potential employers, instructors, and peers who want to view my portfolio and web development skills. It’s also a way for me to contribute to the broader web development community.</p>
+
+      <p><strong>What Visitors Can Expect:</strong> Visitors will find sections with projects I’ve completed, concepts I’ve applied, and an easy way to contact me. Each section highlights different skills, allowing viewers to see a range of work and techniques.</p>
+
       <p>Images for the Home page</p>
-        <img src="github.png" alt="image for homepage">
+      <img src="github.png" alt="image for homepage">
+      <img src="vscode.png" alt="image for homepage">
 
-      </ul>
       <h3>Websites</h3>
-      <p>
-        Here are the websites I created in my class
-      </p>
-      <p>Images for the Page 2</p>
-        <img src="rafting.png" alt="image for page">
-        <img src="raftingw.png" alt="image for page">
+      <p><strong>Projects Overview:</strong> This section showcases various projects completed during my course, covering skills like HTML, CSS, JavaScript, and responsive design. Each project demonstrates practical applications of what I’ve learned.</p>
 
-      </ul>
-      <h3>Concept practices</h3>
-      <p>
-        Here are some of the practices I have done using concepts I learned in my class
-      </p>
-      <p>Images for the Page 3</p>
-        <img src="nelson.png" alt="image for page3">
-        <img src="webpage.png" alt="image for page3">
+      <p><strong>Skills and Technologies Used:</strong> In these projects, I used tools like HTML, CSS, JavaScript, and frameworks like Bootstrap to create responsive, interactive web pages. Each project helps to show my ability to build and troubleshoot.</p>
 
-      </ul>
+      <p><strong>Why Visitors Will Come to the Projects Page:</strong> This section will help employers and instructors evaluate my technical skills and project completion. It also offers inspiration to other students or developers working on similar projects.</p>
+
+      <p>Images for Page 2</p>
+      <img src="rafting.png" alt="image for page1">
+      <img src="raftingw.png" alt="image for page1">
+
+      <h3>Concept Practices</h3>
+      <p><strong>Concept Practices Overview:</strong> In this section, I display my knowledge of important concepts like user experience (UX), responsive design, and clean code structure. These practices are reflected in my projects, showing how each concept improves the final product.</p>
+
+      <p><strong>Benefits of Learning and Applying Concepts:</strong> Learning and applying concepts like UX, accessibility, and responsive design has made my projects more professional and user-friendly. This shows visitors my dedication to continuous improvement and understanding industry standards.</p>
+
+      <p><strong>Why Visitors Will Come to the Concept Practices Page:</strong> This page is especially valuable for employers and instructors looking to assess my practical understanding of core web development concepts. It also provides a resource for other students learning these same principles.</p>
+
+      <p>Images for Page 3</p>
+      <img src="nelson.png" alt="image for page2">
+      <img src="webpage.png" alt="image for page2">
+
       <hr>
-      <h2>
-        Wireframes
-      </h2>
-      <p>
-        Create three wireframes for your site. One for each page and list them here</p>
+
+      <h2>Wireframes</h2>
+      <p>Create three wireframes for your site. One for each page and list them here</p>
 
       <h3>Home</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
+      <p>[Any additional details about home that the wireframe does not make clear]</p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
+      <h3>Websites</h3>
+      <p>[Any additional details about page 2 that the wireframe does not make clear]</p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
+      <h3>Concept Practices</h3>
+      <p>[Any additional details about page 3 that the wireframe does not make clear]</p>
       <img src="#" alt="page 3 wireframe">
     </main>
   </body>
 
 </html>
+
