--- a/wireframepractice/wireframe.html
+++ b/wireframepractice/wireframe.html
@@ -12,10 +12,10 @@
 
     <!-- Header Section -->
     <header class="header-grid">
-        <div class="logo-title">
+        <a href="wireframe.html" class="logo-title">
             <img src="../images/logo.png" alt="Rafting Co. Logo" class="logo-img">
             <span class="logo-text">Rafting Co.</span>
-        </div>
+        </a>
         <nav class="nav-links">
             <a href="rivers.html">Rivers</a>
             <a href="about.html">About</a>
