--- a/portfolio/site-plan.html
+++ b/portfolio/site-plan.html
@@ -95,7 +95,7 @@
       <h3>Websites</h3>
       <p><strong>Projects Overview:</strong> This section showcases various projects completed during my course, covering skills like HTML, CSS, JavaScript, and responsive design. Each project demonstrates practical applications of what I’ve learned.</p>
 
-      <p><strong>Skills and Technologies Used:</strong> In these projects, I used tools like HTML, CSS, JavaScript, and frameworks like Bootstrap to create responsive, interactive web pages. Each project helps to show my ability to build and troubleshoot.</p>
+      <p><strong>Skills and Technologies Used:</strong> In these projects, I used tools like HTML and CSS to create web pages. Each project helps to show my ability to build and troubleshoot.</p>
 
       <p><strong>Why Visitors Will Come to the Projects Page:</strong> This section will help employers and instructors evaluate my technical skills and project completion. It also offers inspiration to other students or developers working on similar projects.</p>
 
@@ -120,16 +120,16 @@
       <p>Create three wireframes for your site. One for each page and list them here</p>
 
       <h3>Home</h3>
-      <p>[Any additional details about home that the wireframe does not make clear]</p>
-      <img src="#" alt="home page wireframe">
+      <p>An about me page that talks about who I am, what i'm studying, and what i've learned.</p>
+      <img src="portfolio.png" alt="home page wireframe">
 
       <h3>Websites</h3>
-      <p>[Any additional details about page 2 that the wireframe does not make clear]</p>
-      <img src="#" alt="page 2 wireframe">
+      <p>A page that shows some of the websites i've made as well as what I learned making them.</p>
+      <img src="websites.png" alt="page 2 wireframe">
 
       <h3>Concept Practices</h3>
-      <p>[Any additional details about page 3 that the wireframe does not make clear]</p>
-      <img src="#" alt="page 3 wireframe">
+      <p>A page that shows some of the concepts i've learned and what I learned.</p>
+      <img src="concepts.png" alt="page 3 wireframe">
     </main>
   </body>
 
