--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -30,8 +30,12 @@
     </main>
     <footer>
         <p>Copyright 2024</p>
-        <i class="fa fa-linkedin-square" style="font-size:24px"></i>
-        <i class="fa fa-github" style="font-size:24px"></i>
+        <a href="https://github.com/braydenbarger">
+            <i class="fa fa-github" style="font-size:24px"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/brayden013/">
+            <i class="fa fa-linkedin-square" style="font-size:24px"></i>
+        </a>
     </footer>
 </body>
 </html>
