--- a/website/index.html
+++ b/website/index.html
@@ -19,15 +19,15 @@
         <h2>About the App</h2>
         <p>Weapons of Mass Determination takes your procrastination habits and turns them into productivity weapons. The app uses gamified techniques to motivate you, ensuring that your most distracting habits now contribute to your success.</p>
         <div class="about-images">
-            <img src="download.jpeg" alt="App Screenshot 1">
-            <img src="images.jpeg" alt="App Screenshot 2">
+            <img src="Screenshot 2024-11-20 145905.png" alt="App Screenshot 1">
+            <img src="Screenshot 2024-11-20 145914.png" alt="App Screenshot 2">
         </div>
     </section>
 
     <section id="features" class="features">
         <h2>Features</h2>
         <ul>
-            <li><strong>Procrastination Battles:</strong> Compete with yourself to defeat your distractions.</li>
+            <li><strong>Calendar:</strong> Plan your daily tasks to prioritize your schedule</li>
             <li><strong>Time Management Tools:</strong> Utilize built-in timers and task organizers.</li>
             <li><strong>Productivity Streaks:</strong> Track your progress and stay motivated.</li>
             <li><strong>Reward System:</strong> Earn rewards as you conquer procrastination.</li>
