--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -25,8 +25,14 @@
 
       <p><strong>What Visitors Can Expect:</strong> Visitors will find sections with projects I’ve completed, concepts I’ve applied, and an easy way to contact me. Each section highlights different skills, allowing viewers to see a range of work and techniques.</p>
 
-      <img src="../portfolio/vscode.png" alt="image for homepage">
-      <img src="../portfolio/github.png" alt="image for homepage">
+        <div class="image-container">
+            <img src="../portfolio/vscode.png" alt="Visual Studio Code">
+            <div class="overlay">Visual Studio Code</div>
+        </div>
+        <div class="image-container">
+            <img src="../portfolio/github.png" alt="GitHub">
+            <div class="overlay">GitHub</div>
+        </div>
     </main>
     <footer>
         <p>Copyright 2024</p>
