--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -19,11 +19,11 @@
     </header>
     <main>
         <h3>Home page</h3>
-      <p><strong>Introduction:</strong> I am Brayden Barger, studying computer science at BYU-Idaho. This website showcases the work I’ve done in my Web Development course, including projects and applied concepts, aimed at future employers and anyone interested in my web development skills.</p>
+      <p> I am Brayden Barger, studying computer science at BYU-Idaho. This website showcases the work I’ve done in my Web Development course, including projects and applied concepts, aimed at future employers and anyone interested in my web development skills.</p>
 
-      <p><strong>Audience:</strong> The site is designed for potential employers, instructors, and peers who want to view my portfolio and web development skills. It’s also a way for me to contribute to the broader web development community.</p>
+      <p> The site is designed for potential employers, instructors, and peers who want to view my portfolio and web development skills. It’s also a way for me to contribute to the broader web development community.</p>
 
-      <p><strong>What Visitors Can Expect:</strong> Visitors will find sections with projects I’ve completed, concepts I’ve applied, and an easy way to contact me. Each section highlights different skills, allowing viewers to see a range of work and techniques.</p>
+      <p> Visitors will find sections with projects I’ve completed, concepts I’ve applied, and an easy way to contact me. Each section highlights different skills, allowing viewers to see a range of work and techniques.</p>
 
         <div class="image-container">
             <img src="../portfolio/vscode.png" alt="Visual Studio Code">
