--- a/personalsite/websites.html
+++ b/personalsite/websites.html
@@ -19,11 +19,11 @@
     </header>
     <main>
       <h3>Websites</h3>
-      <p><strong>Projects Overview:</strong> This section showcases various projects completed during my course, covering skills like HTML, CSS, JavaScript, and responsive design. Each project demonstrates practical applications of what I’ve learned.</p>
+      <p> This section showcases various projects completed during my course, covering skills like HTML, CSS, JavaScript, and responsive design. Each project demonstrates practical applications of what I’ve learned.</p>
 
-      <p><strong>Skills and Technologies Used:</strong> In these projects, I used tools like HTML and CSS to create web pages. Each project helps to show my ability to build and troubleshoot.</p>
+      <p> In these projects, I used tools like HTML and CSS to create web pages. Each project helps to show my ability to build and troubleshoot.</p>
 
-      <p><strong>Why Visitors Will Come to the Projects Page:</strong> This section will help employers and instructors evaluate my technical skills and project completion. It also offers inspiration to other students or developers working on similar projects.</p>
+      <p> This section will help employers and instructors evaluate my technical skills and project completion. It also offers inspiration to other students or developers working on similar projects.</p>
 
       <img src="../portfolio/rafting.png" alt="image for page1">
       <img src="../portfolio/raftingw.png" alt="image for page1">
