--- a/personalsite/skills.html
+++ b/personalsite/skills.html
@@ -19,11 +19,11 @@
     </header>
     <main>
       <h3>Skills</h3>
-      <p><strong>Skills Overview:</strong> In this section, I display my knowledge of important skills like user experience (UX), responsive design, and clean code structure. These practices are reflected in my projects, showing how each concept improves the final product.</p>
+      <p> In this section, I display my knowledge of important skills like user experience (UX), responsive design, and clean code structure. These practices are reflected in my projects, showing how each concept improves the final product.</p>
 
-      <p><strong>Benefits of Learning and Applying Concepts:</strong> Learning and applying concepts like UX, accessibility, and responsive design has made my projects more professional and user-friendly. This shows visitors my dedication to continuous improvement and understanding industry standards.</p>
+      <p> Learning and applying concepts like UX, accessibility, and responsive design has made my projects more professional and user-friendly. This shows visitors my dedication to continuous improvement and understanding industry standards.</p>
 
-      <p><strong>Why Visitors Will Come to the Concept Practices Page:</strong> This page is especially valuable for employers and instructors looking to assess my practical understanding of core web development concepts. It also provides a resource for other students learning these same principles.</p>
+      <p> This page is especially valuable for employers and instructors looking to assess my practical understanding of core web development concepts. It also provides a resource for other students learning these same principles.</p>
 
       <img src="../portfolio/nelson.png" alt="image for page2">
       <img src="../portfolio/webpage.png" alt="image for page2">
