--- a/personalsite/skills.html
+++ b/personalsite/skills.html
@@ -19,11 +19,13 @@
     </header>
     <main>
       <h3>Skills</h3>
-      <p> In this section, I display my knowledge of important skills like user experience (UX), responsive design, and clean code structure. These practices are reflected in my projects, showing how each concept improves the final product.</p>
+      <p>This section highlights my skills in user experience (UX), responsive design, and clean code. These concepts improve the quality and usability of my projects.</p>
 
-      <p> Learning and applying concepts like UX, accessibility, and responsive design has made my projects more professional and user-friendly. This shows visitors my dedication to continuous improvement and understanding industry standards.</p>
+      <p>Applying UX, accessibility, and responsive design has made my work more professional and user-friendly, showing my commitment to industry standards.</p>
+      
+      <p>This page is useful for employers, instructors, and students to see my practical understanding of core web development concepts.</p>      
 
-      <p> This page is especially valuable for employers and instructors looking to assess my practical understanding of core web development concepts. It also provides a resource for other students learning these same principles.</p>
+      <h3>Examples of websites I've recreated:</h3>
 
       <img src="../portfolio/nelson.png" alt="image for page2">
       <img src="../portfolio/webpage.png" alt="image for page2">
