--- a/personalsite/websites.html
+++ b/personalsite/websites.html
@@ -19,11 +19,13 @@
     </header>
     <main>
       <h3>Websites</h3>
-      <p> This section showcases various projects completed during my course, covering skills like HTML, CSS, JavaScript, and responsive design. Each project demonstrates practical applications of what I’ve learned.</p>
+      <p>This section showcases projects from my course, highlighting skills like HTML, CSS, JavaScript, and responsive design.</p>
 
-      <p> In these projects, I used tools like HTML and CSS to create web pages. Each project helps to show my ability to build and troubleshoot.</p>
+      <p>Each project demonstrates my ability to build and troubleshoot web pages using these tools.</p>
+      
+      <p>Employers, instructors, and other developers can use this section to evaluate my skills or find inspiration for similar projects.</p>      
 
-      <p> This section will help employers and instructors evaluate my technical skills and project completion. It also offers inspiration to other students or developers working on similar projects.</p>
+      <h3>Websites I've created:</h3>
 
       <img src="../portfolio/rafting.png" alt="image for page1">
       <img src="../portfolio/raftingw.png" alt="image for page1">
