--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -19,11 +19,11 @@
     </header>
     <main>
         <h3>Home page</h3>
-      <p> I am Brayden Barger, studying computer science at BYU-Idaho. This website showcases the work I’ve done in my Web Development course, including projects and applied concepts, aimed at future employers and anyone interested in my web development skills.</p>
+        <p>Hi, I;m Brayden Barger, a computer science student at BYU-Idaho. This site showcases my web development projects and skills.</p>
 
-      <p> The site is designed for potential employers, instructors, and peers who want to view my portfolio and web development skills. It’s also a way for me to contribute to the broader web development community.</p>
-
-      <p> Visitors will find sections with projects I’ve completed, concepts I’ve applied, and an easy way to contact me. Each section highlights different skills, allowing viewers to see a range of work and techniques.</p>
+        <p>It's built for employers, instructors, and peers to explore my work, and for anyone interested in web development.</p>
+        
+        <p>You'll find projects, applied concepts, and ways to contact me, highlighting my skills and techniques.</p>
 
         <div class="image-container">
             <img src="../portfolio/vscode.png" alt="Visual Studio Code">
