--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <h3>Home page</h3>
-        <p>Hi, I;m Brayden Barger, a computer science student at BYU-Idaho. This site showcases my web development projects and skills.</p>
+        <p>Hi, I'm Brayden Barger, a computer science student at BYU-Idaho. This site showcases my web development projects and skills.</p>
 
         <p>It's built for employers, instructors, and peers to explore my work, and for anyone interested in web development.</p>
         
